--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
 }
 
 .homebar {
+    padding: 15px 200px;
     display: flex;
-    padding: 15px;
     align-items: center;
 }
 
@@ -33,10 +33,13 @@
 }
 
 .headercontent {
+    padding: 50px 200px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     flex: auto;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
 .headertext {
@@ -73,6 +76,45 @@
     justify-content: space-around;
 }
 .headerlogo {
-    width: 300px;
-    height: auto;
+    display: flex;
+    width: 100%;
+    height: 200px;
+}
+
+.maincontent {
+    padding: 50px 200px;
+    display: flex;
+    flex-direction: column;
+}
+
+.infoheader {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+    font-size: 36px;
+    font-weight: 800px;
+    color: #1f2937;
+}
+
+.info {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 200px;
+    width: 200px;
+}
+
+.card img {
+    width: 100%;
+    height: 150px;
+    border: 5px solid;
+    border-color: #3882f6;
+    border-radius: 15%;
 }
