--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@
     justify-content: space-around;
     flex-wrap: wrap;
     gap: 15px;
+    margin-bottom: 50px;
 }
 
 .card {
@@ -117,4 +118,26 @@
     border: 5px solid;
     border-color: #3882f6;
     border-radius: 15%;
+}
+
+.quote {
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #e5e7e5;
+}
+
+.quotetext {
+    color: #1f2937;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300px;
+}
+
+.quoteauthor {
+    font-weight: 800px;
+    font-size: 20px;
+    align-self: flex-end;
 }
