--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@
     justify-content: center;
     align-items: center;
     background-color: #e5e7e5;
+    margin-bottom: 50px;
 }
 
 .quotetext {
@@ -140,4 +141,34 @@
     font-weight: 800px;
     font-size: 20px;
     align-self: flex-end;
+}
+
+.calltoaction {
+    background-color: #3882f6;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 150px;
+    padding: 20px;
+    padding: 10px 50px;
+}
+
+.ctatext h1 {
+    font-size: 30px;
+    font-weight: 800px;
+    color: #f9faf8;
+}
+
+.ctatext p {
+    color: #f9faf8;
+}
+
+.ctabutton button {
+    background-color: #3882f6;
+    color: #ffffff;
+    padding: 8px 20px;
+    border-radius: 8px;
+    border: solid;
+    border-color: #ffffff;
 }
